Update lung tumor analysis

--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -151,6 +151,9 @@ Data was collected using MassHunter software (Agilent). Metabolites were identif
 
 Resulting data from all samples were normalized to the internal standard d4-succinate. Samples highlighted in yellow were swapped with normalized data from the unsaturated run. The identity of each peak was ensured by visualization in Mass Hunter Qual and Quant. The data has also been roughly reordered by metabolic process. False positives were removed. All but the best representative of duplicate metabolites, which were created through variability in the derivatization process, were also removed.
 
+#### 9.2 Human lung adenomcarcinoma metabolomics.
+Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and processed as in our previous re-study of this data [@doi:10.1093/gigascience/giz137]. 
+
 ### 10. Data availability.
 
 Raw data produced for this study are in the process of being uploaded to the appropriate repositories. In the meantime, the raw data can be accessed at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1].
