--- a/content/03.results.md
+++ b/content/03.results.md
@@ -37,9 +37,9 @@ The importance of connectivity could also be considered in a clinical context. F
 In order to demonstrate the utility of Metaboverse to the community, we used Metaboverse to analyze public and new datasets. From the vignettes provided below, we show that Metaboverse not only identifies points of interest previously described or expected, but also rapidly identifies unexpected and systematic regulatory patterns in a reaction network context.
 
 #### 1. Perturbation of mitochondrial fatty acid synthesis across time.
-Mitochondrial fatty acid synthesis (mtFAS) acts as an important metabolic pathway long recognized to produce lipoic acid, a critical cofactor for several metabolic enzymes. Recent work has begun to uncover additional, important roles for this pathway. For example, we now know that mtFAS can perform metabolic nutrient-sensing roles to coordinate lipoic acid synthesis with iron-sulfur (FeS) cluster biogenesis and assembly of oxidative phosphorylation complexes, and more [@doi:10.1016/j.cub.2018.08.022; @doi:10.7554/eLife.17828]. Additionally, this pathway has received increased physiological focus with the discovery of patients with mutations in key mtFAS enzymes [@doi:10.1016/j.ajhg.2016.09.021].
+Mitochondrial fatty acid synthesis (mtFAS) acts as an important metabolic pathway long recognized to produce lipoic acid, a critical cofactor for several metabolic enzymes. Recent work has begun to uncover additional, important roles for this pathway. For example, we now know that mtFAS can perform metabolic nutrient-sensing roles to coordinate lipoic acid synthesis with iron-sulfur (Fe-S) cluster biogenesis and assembly of oxidative phosphorylation complexes, and more [@doi:10.1016/j.cub.2018.08.022; @doi:10.7554/eLife.17828]. Additionally, this pathway has received increased physiological focus with the discovery of patients with mutations in key mtFAS enzymes [@doi:10.1016/j.ajhg.2016.09.021].
 
-<i>MCT1</i>in <i>Saccharomyces cerevisiae</i> is an evolutionarily conserved acyltransferase responsible for the transfer of a malonyl group from malonyl-CoA to the mitochondrial acyl carrier protein (ACP). By knocking out this gene, one can simulate the effects of a disruption in mtFAS. In order to probe the relationship between mtFAS-related protein concentration and the effects of its perturbation on downstream metabolic processes from a systematic perspective, we used a <i>mct1</i>&Delta; model in <i>Saccharomyces cerevisiae</i> to measure steady-state proteomics and transcriptomics at 12 hours after a shift to a non-fermentable carbon source, as well as steady-state metabolomics at 0, 15, 30, 60, and 180 minutes after this shift in carbon source. By layering these data onto the <i>Saccharomyces cerevisiae</i> metabolic network using Metaboverse, we observed interesting respiratory signatures as expected based on our previous work [@doi:10.1016/j.cub.2018.08.022; @doi:10.7554/eLife.17828]. For example, using Metaboverse, we noticed a strong pattern in the electron transfer from ubiquinol to cytochrome C of complex III of the electron transport chain (ETC) (Figure @fig:mct1_vignette A). At the proteomics level, cytochrome C component proteins, CYC1 and CYC7 are both significantly reduced in concentration compared to wild-type cells (log<sub>2</sub>(fold change): -1.57 & -0.88; p-value: < 0.01 & < 0.01; respectively). This reduction in cytochrome C concentration is paired with a marked reduction in the concentration of the protein components of cytochrome C reductase, which is a catalyst of this electron transfer reaction (average log<sub>2</sub>(fold change) of all measured protein components = -2.03, where 9/11 component proteins were measured (7/11 passed statistical significance thresholds of BH-corrected p-value <= 0.05). Range of significant log<sub>2</sub>(fold change) values: -0.34 to -3.21).   
+<i>MCT1</i> in <i>Saccharomyces cerevisiae</i> is an evolutionarily conserved acyltransferase responsible for the transfer of a malonyl group from malonyl-CoA to the mitochondrial acyl carrier protein (ACP). By knocking out this gene, one can simulate the effects of a disruption in mtFAS. In order to probe the relationship between mtFAS-related protein concentration and the effects of its perturbation on downstream metabolic processes from a systematic perspective, we used a <i>mct1</i>&Delta; model in <i>Saccharomyces cerevisiae</i> to measure steady-state proteomics and transcriptomics at 12 hours after a shift to a non-fermentable carbon source, as well as steady-state metabolomics at 0, 15, 30, 60, and 180 minutes after this shift in carbon source. By layering these data onto the <i>Saccharomyces cerevisiae</i> metabolic network using Metaboverse, we observed interesting respiratory signatures as expected based on our previous work [@doi:10.1111/mmi.12402; @doi:10.1016/j.molcel.2018.06.039]. For example, using Metaboverse, we noticed a strong pattern in the electron transfer from ubiquinol to cytochrome C of complex III of the electron transport chain (ETC) (Figure @fig:mct1_vignette A). At the proteomics level, cytochrome C component proteins, CYC1 and CYC7 are both significantly reduced in concentration compared to wild-type cells (log<sub>2</sub>(fold change): -1.57 & -0.88; p-value: < 0.01 & < 0.01; respectively). This reduction in cytochrome C concentration is paired with a marked reduction in the concentration of the protein components of cytochrome C reductase, which is a catalyst of this electron transfer reaction (average log<sub>2</sub>(fold change) of all measured protein components = -2.03, where 9/11 component proteins were measured; 7/11 passed statistical significance thresholds of BH-corrected p-value <= 0.05. Range of significant log<sub>2</sub>(fold change) values: -0.34 to -3.21).  
 
 ![
   **Metaboverse identifies several reaction motifs of interest in <i>mct1</i>&Delta; cells.**
@@ -53,11 +53,11 @@ By analyzing this multi-omics dataset using reaction motif analysis and other in
 #### 2. Metabolic signatures in human lung adenocarcinomas compared to normal lung tissue.
 We next turned to published human lung adenocarcinoma steady-state metabolomics data [@doi:10.1158/1940-6207.CAPR-14-0329] to assess the utility of Metaboverse when analyzing this data. Lung cancer remains a leading cause of death worldwide, and a more complete understanding of the metabolism of these tumors is essential in understanding how to better treat the condition.
 
-Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329], and in our recent re-study of the data [@doi:10.1093/gigascience/giz137], nucleotide metabolism was broadly up-regulated in adenocarcinoma samples in the motif analysis and perturbation connectivity analysis (Figure @fig:lung_vignette A). We also notice similar perturbations in xanthine (Figure @fig:lung_vignette B), glutamine, and others, which are highlighted to the user quickly in the motif and perturbation connectivity analyses. However, as we previously emphasized [@doi:10.1093/gigascience/giz137], by approaching these perturbations in a reaction-centric approach, we can identify regulatory behavior that further contextualizes the data. For example, we highlighted the up-regulation of glyceric acid coupled with the proximal down-regulation of 3-Phosphoglyceric acid indicates the activity of glycerate kinase, which is missed in the original study and highlighted by the motif analysis available within Metaboverse. Activity of this sub-pathway is consequential as it has connections to serine metabolism which may be fostering an ideal environment for tumorigenesis (Figure @fig:lung_vignette C). Interestingly, we see that across the measured and significant metabolites involved in the TCA cycle, we see up-regulation of malate (log<sub>2</sub> Fold Change: 0.39, adjusted-p: 0.02) and down-regulation of citrate (log<sub>2</sub> Fold Change: -0.64, adjusted-p: 0.01). This is consistent with the hypothesis that the TCA cycle is being starved of carbon via pyruvate, which is probably being shunted to lactate production, thus the lower citrate levels, while part of the TCA cycle can be fed through glutamate (log<sub>2</sub> Fold Change: 0.47, adjusted-p: < 0.01), thus the increased malate levels (Figure @fig:lung_vignette D).
+Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329], and in our recent re-study of the data [@doi:10.1093/gigascience/giz137], nucleotide metabolism was broadly up-regulated in adenocarcinoma samples in the motif analysis and perturbation connectivity analysis (Figure @fig:lung_vignette A). We also notice similar perturbations in xanthine (Figure @fig:lung_vignette B), glutamine, and others, which are highlighted to the user quickly in the motif and perturbation connectivity analyses. However, as we previously emphasized [@doi:10.1093/gigascience/giz137], by approaching these perturbations in a reaction-centric approach, we can identify regulatory behavior that further contextualizes the data. For example, we previously highlighted through a more manual approach the up-regulation of glyceric acid coupled with the proximal down-regulation of 3-Phosphoglyceric acid which could indicate the activity of glycerate kinase. This connection was missed in the original study, but was highlighted by the motif analysis available within Metaboverse. Activity of this sub-pathway is consequential as it has connections to serine metabolism which may be fostering an ideal environment for tumorigenesis (Figure @fig:lung_vignette C). Interestingly, within the measured and significant metabolites involved in the TCA cycle, we see a moderate up-regulation of malate (log<sub>2</sub> Fold Change: 0.39, adjusted-p: 0.02) and down-regulation of citrate (log<sub>2</sub> Fold Change: -0.64, adjusted-p: 0.01). This is consistent with the hypothesis that the TCA cycle is being starved of carbon via pyruvate, which is probably being shunted to lactate production, thus the lower citrate levels, while part of the TCA cycle can be fed through glutamate (log<sub>2</sub> Fold Change: 0.47, adjusted-p: < 0.01), thus the increased malate levels (Figure @fig:lung_vignette D) [@doi:10.1038/nrc.2016.71].
+
+Metaboverse simplifies the analysis process and allows users more flexibility via its interactive platform to identify canonical and interesting regulatory patterns within their data with ease. While we previously identified the regulatory pattern identified in Figure @fig:lung_vignette C, Metaboverse offers an automated platform for the discovery of such events, which were missed in the original study. We hope that by using Metaboverse, users will be able to extract new and exciting hypotheses that can drive their field forward.
 
 ![
   **Metaboverse identifies nucleotide metabolism signatures in lung adenomcarcinoma metabolomics data.**
   (A) Up-regulation of several nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation connectivity analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development.
 ](./content/figures/fig_lung.png "Square image"){#fig:lung_vignette}
-
-Metaboverse simplifies the analysis process and allows users more flexibility via its interactive platform to identify canonical and interesting regulatory patterns within their data with ease. While we previously identified the regulatory pattern identified in Figure @fig:lung_vignette C, Metaboverse offers an automated platform for the discovery of such events, which were missed in the original study. We hope that by using Metaboverse, users will be able to extract new and exciting hypotheses that can drive their field forward.
