--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -2,9 +2,9 @@
 A tutorial for how to use Metaboverse can be found at metaboverse.readthedocs.io/getting-started.
 
 ### 1. Network Curation
-Biological networks are curated using the current version of the Reactome database. In particular, the pathway records for each species, complex component and interaction data, Ensembl, and UniProt Reactome mapping tables are integrated into the network database for Metaboverse. Additionally, the ChEBI database names table (ftp://ftp.ebi.ac.uk/pub/databases/chebi/Flat_file_tab_delimited/names.tsv.gz) is integrated. These data are used to generate a series of mapping dictionaries for entities to reactions and reactions to pathways for the curation of the global network.
+Biological networks are curated using the current version of the Reactome database. In particular, the pathway records for each species, complex component and interaction data, Ensembl, and UniProt Reactome mapping tables are integrated into the network database for Metaboverse. Additionally, the ChEBI and The Human Metabolome databases are also referenced for metabolite synonym mapping [@doi:10.1093/nar/gkv1031; @doi:10.1093/nar/gkx1089]. These data are used to generate a series of mapping dictionaries for entities to reactions and reactions to pathways for the curation of the global network.
 
-After the relevant information is parsed from each table or record, the global network is propagated using the NetworkX networking framework [cite:networkx] to generate nodes for each reaction and reaction component and edges connecting components to the appropriate reactions. In some cases, a separate ID is used to generate two nodes for the same metabolite within two separate compartments to aid in visualization downstream; however, user data for the given entity would be properly mapped to both nodes.
+After the relevant information is parsed from each table or record, the global network is propagated using the NetworkX networking framework [@url:http://conference.scipy.org/proceedings/SciPy2008/paper_2/full_text.pdf] to generate nodes for each reaction and reaction component and edges connecting components to the appropriate reactions. In some cases, a separate ID is used to generate two nodes for the same metabolite within two separate compartments to aid in visualization downstream; however, user data for the given entity would be properly mapped to both nodes.
 
 After the network is curated for the user-specified organism, each node's degree (or magnitude of edges or connections) is determined to aid in the user's downstream ability to avoid visualizing high-degree components, such as a proton or water, on the metabolic network, which can lead to graphical entanglement and cluttering and a decrease in computational performance [@doi:10.1093/gigascience/giz137].
 
