--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -27,10 +27,12 @@ For pseudo-reactions, appropriate notes are included to describe the collapse. D
   (a) For reactions where at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) Where an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) Where an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) As in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A grey node indicates a reaction. A grey node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
 ](./content/figures/collapse_schematic.png "Square image"){#fig:collapse_schematic}
 
-### 4. Regulatory pattern (motif) searches
+### 4. Regulatory pattern (motif) searches and sorting
+Metaboverse provides a variety of different regulatory patterns (motifs) for users to explore. To identify a motif is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
 
+The identified motifs will be listed in a stamp view. Each stamp represents a motif, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified motifs can be sorted according to three different criteria: the number of pathways containing the motif (not applicable for pathway motifs), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the motifs are arranged in order from the largest to the smallest. When sorting by the statistical significance, motifs with statistical significance on both the input side (reactants) and the output side (products) are at the front, followed by the motifs with statistical significance on one of the two sides, and finally the motifs with no statistical significance on both sides. Within each tier, the motifs are sorted from lowest to highest p-values.
 
-
+When the stamp view demonstrates draws reaction motifs, all the pathways containing the corresponding motif will be listed below the stamp view by clicking on the appropriate stamp. For pathway motifs, clicking on a pathway ID will draw the selected pathway as a graph, with all the motifs in this pathway highlighted.
 
 ### 5. Nearest neighborhood searches and prioritization
 To visualize all global connections, a user can select an entity (a gene, protein, or metabolite) and visualize all reactions in which the component is involved. By doing so, the user can visualize other downstream effects a change of one entity might have across the global network, which consequently aids in bridging and identifying any motifs that may occur between canonically annotated pathways. These neighborhoods can be expanded to view multiple downstream reaction steps and their accompanying genes, proteins, and metabolites by modulating the appropriate user option in the app.
